--- a/css/component.css
+++ b/css/component.css
@@ -587,6 +587,10 @@
   width: 100%;
   height: 315px;
 }
+.work-video-chilldpage{
+  width: 100%;
+  height: 620px;
+}
 @media(max-width: 768px){
   .work-video{
     width: 100%;
