--- a/css/component.css
+++ b/css/component.css
@@ -592,6 +592,12 @@
   height: 620px;
 }
 @media(max-width: 768px){
+  .work-video-chilldpage{
+    width: 100%;
+    height: 245px;
+  }
+}
+@media(max-width: 768px){
   .work-video{
     width: 100%;
     height: 245px;
